MDEV-37482: Introduce innodb_adaptive_hash_index_cells

The number of hash table cells in the InnoDB adaptive hash index
was fixed on the initial innodb_buffer_pool_size and insufficient
for some workloads, leading to excessively long hash bucket chains.

Let us introduce the parameter innodb_adaptive_hash_index_cells
that can be configured with SET GLOBAL. This value will be divided by
innodb_adaptive_hash_index_parts, because each partition will
contain its own hash table.